--- a/src/main/resources/css/editor.css
+++ b/src/main/resources/css/editor.css
@@ -15,6 +15,11 @@
     -fx-background-radius: 4px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.4), 10, 0, 5, 5);
     -fx-opacity: 0.9;
+    -fx-text-fill: black;
+}
+
+.component-btn .label{
+    -fx-text-fill: black;
 }
 
 .component-btn:hover {
