--- a/src/main/resources/layouts/shortcut_dialog.fxml
+++ b/src/main/resources/layouts/shortcut_dialog.fxml
@@ -7,54 +7,66 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="243.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutDialogController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutDialogController">
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Press the keys to record a shortcut" />
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
-               <center>
-                  <TextField fx:id="shortcutTextField" alignment="CENTER" editable="false" promptText="Click here to type the shortcut..." BorderPane.alignment="CENTER">
+            <Button fx:id="iconBtn" minHeight="80.0" mnemonicParsing="false" prefHeight="80.0" text="Select Icon...">
+               <VBox.margin>
+                  <Insets bottom="10.0" />
+               </VBox.margin>
+            </Button>
+            <Label text="Click on the field below and press the keys to record a shortcut">
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="System Italic" size="12.0" />
+               </font></Label>
+            <GridPane prefHeight="61.0" prefWidth="430.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="380.0" minWidth="10.0" prefWidth="355.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="209.0" minWidth="10.0" prefWidth="55.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="clearShortcutBtn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="8.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <TextField fx:id="shortcutTextField" alignment="CENTER" editable="false" prefHeight="51.0" prefWidth="346.0" promptText="Click here to enter the shortcut">
                      <font>
                         <Font size="24.0" />
                      </font>
-                     <BorderPane.margin>
-                        <Insets left="2.0" />
-                     </BorderPane.margin>
-                  </TextField>
-               </center>
-               <right>
-                  <Button fx:id="clearShortcutBtn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" BorderPane.alignment="CENTER">
-                     <BorderPane.margin>
-                        <Insets bottom="7.0" left="10.0" right="2.0" top="7.0" />
-                     </BorderPane.margin>
-                  </Button>
-               </right>
-            </BorderPane>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Name" />
-                  <TextField fx:id="nameTextField" promptText="Shortcut Name..." HBox.hgrow="ALWAYS">
-                     <HBox.margin>
-                        <Insets left="10.0" />
-                     </HBox.margin>
                   </TextField>
                </children>
-               <padding>
-                  <Insets left="10.0" right="10.0" top="10.0" />
-               </padding>
-            </HBox>
-            <Button fx:id="iconBtn" mnemonicParsing="false" text="Select Icon...">
                <VBox.margin>
-                  <Insets top="10.0" />
+                  <Insets />
                </VBox.margin>
-            </Button>
+            </GridPane>
+            <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label text="Enter the shortcut name below ( optional ):" textAlignment="CENTER">
+                     <VBox.margin>
+                        <Insets bottom="4.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField fx:id="nameTextField" maxWidth="1.7976931348623157E308" promptText="Shortcut name" />
+               </children>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </VBox>
          </children>
          <BorderPane.margin>
             <Insets />
          </BorderPane.margin>
          <padding>
-            <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </VBox>
    </center>
@@ -69,7 +81,7 @@
             <Button fx:id="selectBtn" mnemonicParsing="false" text="Select" />
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" />
          </padding>
       </HBox>
    </bottom>
