--- a/src/main/resources/layouts/web_link_dialog.fxml
+++ b/src/main/resources/layouts/web_link_dialog.fxml
@@ -19,13 +19,17 @@
                   <Insets bottom="5.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="urlTextField" alignment="CENTER" promptText="Insert the URL here..." />
+            <HBox>
+               <children>
+                  <TextField fx:id="urlTextField" alignment="CENTER" promptText="Insert the URL here..." HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
             <HBox>
                <VBox.margin>
                   <Insets top="15.0" />
                </VBox.margin>
                <children>
-                  <ImageView fx:id="imageView" fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="imageView" fitHeight="48.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets right="8.0" />
                      </HBox.margin>
@@ -38,11 +42,6 @@
                            </VBox.margin>
                         </Label>
                         <TextField fx:id="titleTextField" promptText="Insert the page title here" />
-                        <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0">
-                           <VBox.margin>
-                              <Insets top="8.0" />
-                           </VBox.margin>
-                        </ProgressBar>
                      </children>
                      <HBox.margin>
                         <Insets />
@@ -50,6 +49,11 @@
                   </VBox>
                </children>
             </HBox>
+            <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0">
+               <VBox.margin>
+                  <Insets top="8.0" />
+               </VBox.margin>
+            </ProgressBar>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -59,6 +63,11 @@
    <bottom>
       <HBox BorderPane.alignment="TOP_RIGHT">
          <children>
+            <Button fx:id="refreshBtn" mnemonicParsing="false" prefWidth="25.0">
+               <tooltip>
+                  <Tooltip text="Refresh"/>
+               </tooltip>
+            </Button>
             <Pane HBox.hgrow="ALWAYS" />
             <Button fx:id="cancelBtn" mnemonicParsing="false" text="Cancel">
                <HBox.margin>
