--- a/src/main/resources/css/sectionlistcell.css
+++ b/src/main/resources/css/sectionlistcell.css
@@ -2,7 +2,7 @@
     -fx-font-size: 1.0em;
     -fx-font-weight: bold;
     -fx-padding: 0 0 0 0;
-
+    -fx-text-fill: -primaryDarkColor;
 }
 
 .sectionlistcell-path {
