--- a/src/main/resources/css/editor/editor.css
+++ b/src/main/resources/css/editor/editor.css
@@ -7,13 +7,13 @@
 }
 
 .bottombar-portrait {
-    -fx-padding: 5px;
+    -fx-padding: 20px;
     -fx-background-color: -primaryColor;
     -fx-background-radius: 2px;
 }
 
 .bottombar-landscape {
-    -fx-padding: 5px;
+    -fx-padding: 20px;
     -fx-background-color: -primaryColor;
     -fx-background-radius: 2px;
 }
@@ -53,6 +53,13 @@
 
 .list-view .list-cell {
     -fx-pref-height: 45px;
+}
+
+.list-view .scroll-bar .increment-arrow,
+.list-view .scroll-bar .decrement-arrow,
+.list-view .scroll-bar .increment-button,
+.list-view .scroll-bar .decrement-button {
+    -fx-padding:0;
 }
 
 .list-view {
