--- a/src/main/resources/layouts/shortcut_dialog.fxml
+++ b/src/main/resources/layouts/shortcut_dialog.fxml
@@ -7,11 +7,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutDialogController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="450.0" styleClass="dialog-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutDialogController">
    <center>
       <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="iconBtn" minHeight="80.0" mnemonicParsing="false" prefHeight="80.0" text="Select Icon...">
+            <Button fx:id="iconBtn" minHeight="80.0" mnemonicParsing="false" prefHeight="80.0" styleClass="icon-button" text="Select Icon...">
                <VBox.margin>
                   <Insets bottom="10.0" />
                </VBox.margin>
@@ -32,31 +32,28 @@
                 <RowConstraints />
               </rowConstraints>
                <children>
-                  <Button fx:id="clearShortcutBtn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" GridPane.columnIndex="1">
+                  <Button fx:id="clearShortcutBtn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" styleClass="clear-button" mnemonicParsing="false" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="8.0" />
                      </GridPane.margin>
                   </Button>
-                  <TextField fx:id="shortcutTextField" alignment="CENTER" editable="false" prefHeight="51.0" prefWidth="346.0" promptText="Click here to enter the shortcut">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
+                  <TextField fx:id="shortcutTextField" alignment="CENTER" editable="false" prefHeight="51.0" prefWidth="346.0" styleClass="shortcut-text-field" promptText="Click here to enter the shortcut">
                   </TextField>
                </children>
                <VBox.margin>
                   <Insets />
                </VBox.margin>
             </GridPane>
-            <ToolBar style="-fx-background-color: transparent;">
+            <ToolBar styleClass="key-button-toolbar">
               <items>
-                <Button fx:id="ctrlBtn" mnemonicParsing="false" text="CTRL" />
-                  <Button fx:id="altBtn" mnemonicParsing="false" text="ALT" />
-                  <Button fx:id="metaBtn" mnemonicParsing="false" text="WIN" />
-                  <Button fx:id="escBtn" mnemonicParsing="false" text="ESC" />
-                  <Button fx:id="enterBtn" mnemonicParsing="false" text="ENTER" />
-                  <Button fx:id="delBtn" mnemonicParsing="false" text="DEL" />
-                  <Button fx:id="shiftBtn" mnemonicParsing="false" text="SHIFT" />
-                  <Button fx:id="tabBtn" mnemonicParsing="false" text="TAB" />
+                <Button fx:id="ctrlBtn" mnemonicParsing="false" styleClass="key-button" text="CTRL" />
+                  <Button fx:id="altBtn" mnemonicParsing="false" styleClass="key-button" text="ALT" />
+                  <Button fx:id="metaBtn" mnemonicParsing="false" styleClass="key-button" text="WIN" />
+                  <Button fx:id="escBtn" mnemonicParsing="false" styleClass="key-button" text="ESC" />
+                  <Button fx:id="enterBtn" mnemonicParsing="false" styleClass="key-button" text="ENTER" />
+                  <Button fx:id="delBtn" mnemonicParsing="false" styleClass="key-button" text="DEL" />
+                  <Button fx:id="shiftBtn" mnemonicParsing="false" styleClass="key-button" text="SHIFT" />
+                  <Button fx:id="tabBtn" mnemonicParsing="false" styleClass="key-button" text="TAB" />
               </items>
                <VBox.margin>
                   <Insets bottom="10.0" />
@@ -69,7 +66,7 @@
                         <Insets bottom="4.0" />
                      </VBox.margin>
                   </Label>
-                  <TextField fx:id="nameTextField" maxWidth="1.7976931348623157E308" promptText="Shortcut name" />
+                  <TextField fx:id="nameTextField" maxWidth="1.7976931348623157E308" promptText="Shortcut name" styleClass="title-text-field" />
                </children>
                <VBox.margin>
                   <Insets top="5.0" />
@@ -80,19 +77,27 @@
             <Insets />
          </BorderPane.margin>
          <padding>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="0.0" left="20.0" right="20.0" top="20.0" />
          </padding>
       </VBox>
    </center>
    <bottom>
       <HBox alignment="TOP_RIGHT" prefHeight="15.0" prefWidth="450.0" BorderPane.alignment="TOP_LEFT">
          <children>
-            <Button fx:id="cancelBtn" mnemonicParsing="false" text="Cancel">
-               <HBox.margin>
-                  <Insets right="10.0" />
-               </HBox.margin>
+            <Button fx:id="cancelBtn" mnemonicParsing="false" styleClass="confirmation-button">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <Image url="/assets/clear.png" />
+                    </ImageView>
+                </graphic>
             </Button>
-            <Button fx:id="selectBtn" mnemonicParsing="false" text="Select" />
+            <Button fx:id="selectBtn" mnemonicParsing="false" styleClass="confirmation-button">
+                <graphic>
+                    <ImageView fitHeight="20" fitWidth="20">
+                        <Image url="/assets/done.png" />
+                    </ImageView>
+                </graphic>
+            </Button>
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" />
