Added bottombar with show/hide in portrait

--- a/src/main/resources/css/editor/buttons.css
+++ b/src/main/resources/css/editor/buttons.css
@@ -85,3 +85,8 @@
     -fx-background-color: -primaryLightColor;
     -fx-background-radius: 2px;
 }
+
+.expand-btn {
+    -fx-background-color: transparent;
+    -fx-effect: innershadow( gaussian , -primaryColor , 70 , 1 , 1 , 1 );
+}
