--- a/src/main/resources/layouts/import_dialog.fxml
+++ b/src/main/resources/layouts/import_dialog.fxml
@@ -7,11 +7,16 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="628.0" prefWidth="488.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="488.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ImportDialogController">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox BorderPane.alignment="CENTER">
          <children>
-            <TitledPane animated="false" collapsible="false" text="Target">
+            <ProgressBar fx:id="progressBar" maxWidth="1.7976931348623157E308" progress="0.0">
+               <VBox.margin>
+                  <Insets bottom="8.0" />
+               </VBox.margin>
+            </ProgressBar>
+            <TitledPane fx:id="targetPanel" animated="false" collapsible="false" text="Target">
                <content>
                   <BorderPane>
                      <left>
@@ -26,6 +31,9 @@
                                  <font>
                                     <Font size="18.0" />
                                  </font>
+                                 <VBox.margin>
+                                    <Insets top="5.0" />
+                                 </VBox.margin>
                               </Label>
                               <Label fx:id="sectionDescriptionLabel" text="Description" />
                            </children>
@@ -39,18 +47,46 @@
                      </right>
                   </BorderPane>
                </content>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </TitledPane>
-            <TitledPane animated="false" collapsible="false" text="Items">
+            <TitledPane fx:id="invalidItemsPanel" animated="false" collapsible="false" text="Invalid Items">
                <content>
                   <BorderPane>
                      <top>
-                        <Label text="Some items can't be imported because they require resources not present in this system" BorderPane.alignment="CENTER" />
+                        <Label prefWidth="450.0" text="Some items can't be imported because they require resources not present in this system:" textAlignment="JUSTIFY" wrapText="true" BorderPane.alignment="CENTER">
+                           <BorderPane.margin>
+                              <Insets />
+                           </BorderPane.margin></Label>
                      </top>
+                     <center>
+                        <ListView fx:id="invalidItemsListView" prefHeight="150.0" BorderPane.alignment="CENTER">
+                           <BorderPane.margin>
+                              <Insets bottom="8.0" top="8.0" />
+                           </BorderPane.margin>
+                        </ListView>
+                     </center>
+                     <bottom>
+                        <CheckBox fx:id="avoidInvalidItemsCheckBox" mnemonicParsing="false" text="Avoid importing invalid items in the layout" BorderPane.alignment="TOP_LEFT" />
+                     </bottom>
                   </BorderPane>
                </content>
                <VBox.margin>
                   <Insets top="8.0" />
                </VBox.margin>
+            </TitledPane>
+            <TitledPane fx:id="optionsPanel" animated="false" collapsible="false" text="Options">
+               <VBox.margin>
+                  <Insets top="8.0" />
+               </VBox.margin>
+               <content>
+                  <VBox>
+                     <children>
+                        <CheckBox fx:id="compatibilityModeCheckBox" mnemonicParsing="false" text="Use Compatibility Mode" />
+                     </children>
+                  </VBox>
+               </content>
             </TitledPane>
          </children>
       </VBox>
@@ -58,4 +94,19 @@
    <padding>
       <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
    </padding>
+   <bottom>
+      <HBox BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="cancelBtn" mnemonicParsing="false" text="Cancel" />
+            <HBox HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets top="8.0" />
+               </HBox.margin></HBox>
+            <Button fx:id="importBtn" mnemonicParsing="false" text="Import Layout" />
+         </children>
+         <BorderPane.margin>
+            <Insets top="8.0" />
+         </BorderPane.margin>
+      </HBox>
+   </bottom>
 </BorderPane>
