--- a/src/main/resources/css/editor/buttons.css
+++ b/src/main/resources/css/editor/buttons.css
@@ -38,6 +38,11 @@
     -fx-text-fill: -primaryTextColor;
 }
 
+.invalid-btn {
+    /*-fx-background-color: rgba(255,86, 86,0.2);*/
+    -fx-opacity: 0.2;
+}
+
 .component-btn:hover {
     -fx-effect: innershadow( gaussian , rgba(255,255,255,0.2), 70 , 1 , 1 , 1 );
 }
