--- a/src/main/resources/layouts/settings_dialog.fxml
+++ b/src/main/resources/layouts/settings_dialog.fxml
@@ -78,6 +78,21 @@
                         </BorderPane>
                     </content>
                 </Tab>
+            <Tab text="Credits">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <children>
+                        <Label text="Dokey was made by the Rocket Guys ( alias for Federico Terzi and Matteo Pellegrino )." />
+                        <Label text="The application uses open-source software and image assets to work." />
+                        <Label text="The licenses are shown below:  " />
+                        <TextArea editable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefRowCount="100" fx:id="licensesTextArea"/>
+                     </children>
+                  </VBox>
+               </content>
+            </Tab>
             </tabs>
         </TabPane>
     </center>
