--- a/src/main/resources/layouts/initialization.fxml
+++ b/src/main/resources/layouts/initialization.fxml
@@ -16,11 +16,11 @@
         <Insets bottom="10.0" top="160.0" />
       </VBox.margin>
     </ProgressBar>
-    <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-1.0" prefWidth="277.0" text="Grab a coffee, it may take a while :)" textAlignment="CENTER" textOverrun="ELLIPSIS" wrapText="false">
+    <Label fx:id="statusLabel" alignment="CENTER" contentDisplay="CENTER" maxWidth="-1.0" prefWidth="277.0" text="%grab_a_coffee" textAlignment="CENTER" textOverrun="ELLIPSIS" wrapText="false">
          <VBox.margin>
             <Insets top="20.0" />
          </VBox.margin></Label>
-      <CheckBox fx:id="startCheckbox" mnemonicParsing="false" selected="true" text="Start Dokey at system startup.">
+      <CheckBox fx:id="startCheckbox" mnemonicParsing="false" selected="true" text="%start_dokey_startup">
          <VBox.margin>
             <Insets bottom="20.0" top="50.0" />
          </VBox.margin>
