--- a/src/main/resources/layouts/settings_dialog.fxml
+++ b/src/main/resources/layouts/settings_dialog.fxml
@@ -10,15 +10,15 @@
     <center>
         <TabPane tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <tabs>
-                <Tab text="General">
+                <Tab text="%general">
                    <content>
                        <VBox prefHeight="200.0" prefWidth="100.0">
                            <children>
-                               <TitledPane animated="false" collapsible="false" text="System">
+                               <TitledPane animated="false" collapsible="false" text="%system">
                                    <content>
                                        <HBox alignment="CENTER_LEFT">
                                  <children>
-                                    <CheckBox fx:id="startupCheckbox" mnemonicParsing="false" text="Start Dokey at system startup." />
+                                    <CheckBox fx:id="startupCheckbox" mnemonicParsing="false" text="%start_dokey_startup" />
                                  </children>
                                        </HBox>
                                    </content>
@@ -26,13 +26,13 @@
                               <Insets bottom="10.0" />
                            </VBox.margin>
                                </TitledPane>
-                               <TitledPane animated="false" collapsible="false" text="Cache and Data">
+                               <TitledPane animated="false" collapsible="false" text="%cache_and_data">
                                    <content>
                                        <HBox alignment="CENTER_LEFT">
                                            <children>
-                                               <Label text="Clear the application cache. NOTE: the app must be restarted afterwards." />
+                                               <Label text="%cache_and_data_msg" />
                                                <Pane HBox.hgrow="ALWAYS" />
-                                               <Button fx:id="clearCacheBtn" mnemonicParsing="false" text="Clear Cache" textAlignment="CENTER">
+                                               <Button fx:id="clearCacheBtn" mnemonicParsing="false" text="%clear_cache" textAlignment="CENTER">
                                                    <HBox.margin>
                                                        <Insets left="20.0" />
                                                    </HBox.margin>
@@ -48,7 +48,7 @@
                        </VBox>
                    </content>
                 </Tab>
-                <Tab text="Applications">
+                <Tab text="%applications">
                     <content>
                         <BorderPane>
                             <center>
@@ -66,7 +66,7 @@
                                 </Label>
                             </top>
                             <bottom>
-                                <Button fx:id="addApplicationBtn" mnemonicParsing="false" text="Add Application..." BorderPane.alignment="TOP_RIGHT">
+                                <Button fx:id="addApplicationBtn" mnemonicParsing="false" text="%add_app" BorderPane.alignment="TOP_RIGHT">
                                     <BorderPane.margin>
                                         <Insets top="6.0" />
                                     </BorderPane.margin>
@@ -78,7 +78,7 @@
                         </BorderPane>
                     </content>
                 </Tab>
-            <Tab text="Credits">
+            <Tab text="%credits">
                <content>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <padding>
