--- a/src/main/resources/layouts/shortcut_icon_list.fxml
+++ b/src/main/resources/layouts/shortcut_icon_list.fxml
@@ -9,15 +9,15 @@
 
 <BorderPane prefHeight="500" prefWidth="300" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.editor.controllers.ShortcutIconListController">
   <top>
-    <TextField fx:id="searchTextField" promptText="Search icon..." />
+    <TextField fx:id="searchTextField" promptText="%search_icon" />
   </top>
   <bottom>
     <ToolBar>
       <items>
         <!--<Button fx:id="addExternalAppBtn" mnemonicParsing="false" text="Add External App..." textAlignment="CENTER" />-->
         <Pane HBox.hgrow="ALWAYS" />
-        <Button fx:id="cancelBtn" alignment="CENTER" text="Cancel" textAlignment="CENTER" />
-        <Button fx:id="selectBtn" alignment="CENTER" text="Select" textAlignment="CENTER" />
+        <Button fx:id="cancelBtn" alignment="CENTER" text="%cancel" textAlignment="CENTER" />
+        <Button fx:id="selectBtn" alignment="CENTER" text="%select" textAlignment="CENTER" />
       </items>
     </ToolBar>
   </bottom>
