--- a/src/main/resources/layouts/web_link_dialog.fxml
+++ b/src/main/resources/layouts/web_link_dialog.fxml
@@ -11,7 +11,7 @@
    <center>
       <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Label text="Insert the URL in the field below:">
+            <Label text="%insert_url_below">
                <font>
                   <Font name="System Italic" size="12.0" />
                </font>
@@ -21,7 +21,7 @@
             </Label>
             <HBox>
                <children>
-                  <TextField fx:id="urlTextField" alignment="CENTER" promptText="Insert the URL here..." HBox.hgrow="ALWAYS" />
+                  <TextField fx:id="urlTextField" alignment="CENTER" promptText="%insert_url_here" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
             <HBox>
@@ -36,12 +36,12 @@
                   </ImageView>
                   <VBox HBox.hgrow="ALWAYS">
                      <children>
-                        <Label text="Title ( optional )">
+                        <Label text="%title">
                            <VBox.margin>
                               <Insets bottom="5.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="titleTextField" promptText="Insert the page title here" />
+                        <TextField fx:id="titleTextField" promptText="%title_msg" />
                      </children>
                      <HBox.margin>
                         <Insets />
